PersonalParser now reads and writes the TM Move IDs